[gd_scene load_steps=12 format=3 uid="uid://bapt0a3aw11v4"]

[ext_resource type="Script" uid="uid://cyh0d64pfygbl" path="res://addons/maaacks_game_template/extras/scripts/pause_menu_controller.gd" id="1_onvsj"]
[ext_resource type="PackedScene" uid="uid://dqmd3smchk57t" path="res://scenes/overlaid_menus/pause_menu.tscn" id="2_8qp3c"]
[ext_resource type="Script" uid="uid://crbo2e4ndbyvk" path="res://addons/maaacks_game_template/extras/scripts/level_list_loader.gd" id="3_bmy5n"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/music_players/background_music_player.tscn" id="4_7aihr"]
[ext_resource type="PackedScene" uid="uid://cn7876b108nc4" path="res://scenes/loading_screen/level_loading_screen.tscn" id="5_3re04"]
[ext_resource type="Script" uid="uid://deu03fatcw7ju" path="res://scenes/game_scene/configurable_sub_viewport.gd" id="6_ascoc"]
[ext_resource type="Script" uid="uid://cw2tr24kndi6i" path="res://scripts/level_list_state_manager.gd" id="7_wr4n6"]
[ext_resource type="PackedScene" uid="uid://cdgctwcdo08a4" path="res://scenes/overlaid_menus/game_won_menu.tscn" id="8_ukb12"]
[ext_resource type="PackedScene" uid="uid://dp1exqn5nj36i" path="res://scenes/overlaid_menus/level_lost_menu.tscn" id="9_i7m4m"]
[ext_resource type="PackedScene" uid="uid://cwi1778nnebjg" path="res://scenes/overlaid_menus/level_won_menu.tscn" id="10_rkfhe"]
[ext_resource type="Script" uid="uid://bf6wf3idc4h3t" path="res://scenes/game_scene/cursor_follower.gd" id="11_8qp3c"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuController" type="Node" parent="." node_paths=PackedStringArray("focused_viewport")]
script = ExtResource("1_onvsj")
pause_menu_packed = ExtResource("2_8qp3c")
focused_viewport = NodePath("../ViewportContainer/ConfigurableSubViewport")

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("3_bmy5n")
level_container = NodePath("../ViewportContainer/ConfigurableSubViewport")
files = Array[String](["res://scenes/levels/level_1.tscn", "res://scenes/levels/level_2.tscn", "res://scenes/levels/level_3.tscn"])
directory = "res://scenes/levels"

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("4_7aihr")]

[node name="LevelLoadingScreen" parent="." instance=ExtResource("5_3re04")]
visible = false

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 2

[node name="ConfigurableSubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
audio_listener_enable_2d = true
audio_listener_enable_3d = true
physics_object_picking = true
size = Vector2i(640, 360)
render_target_update_mode = 4
script = ExtResource("6_ascoc")

[node name="LevelListManager" type="Node" parent="." node_paths=PackedStringArray("level_list_loader", "level_loading_screen")]
script = ExtResource("7_wr4n6")
level_list_loader = NodePath("../LevelLoader")
main_menu_scene = "res://scenes/menus/main_menu/main_menu_with_animations.tscn"
ending_scene = "res://scenes/end_credits/end_credits.tscn"
level_loading_screen = NodePath("../LevelLoadingScreen")
game_won_scene = ExtResource("8_ukb12")
level_lost_scene = ExtResource("9_i7m4m")
level_won_scene = ExtResource("10_rkfhe")

[node name="CursorFollower" type="Node2D" parent="."]
script = ExtResource("11_8qp3c")

[node name="CursorHintPanel" type="PanelContainer" parent="CursorFollower"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.0
offset_top = 24.0
offset_right = 39.0
offset_bottom = 65.0
grow_horizontal = 2

[node name="CursorHint" type="Label" parent="CursorFollower/CursorHintPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "testeets"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="level_load_started" from="LevelLoader" to="." method="_on_level_loader_level_load_started"]
[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
[connection signal="levels_finished" from="LevelLoader" to="." method="_on_level_loader_levels_finished"]
